--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Amina Moosa</title>
 </head>
     <body>
+
+        <a href="Blogs/blog.html">Blogs</a>
+        
         <h1>Week 1 Blog Post</h1>
         <h3> Setting up GitHub and publishing Pages.</h3>
             <p>The process was relatively smooth, save for some hiccups. <br>
