Added Essays Page
Added the essay.html page and then added the links onto the main page and essays page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     <body>
 
-        <a href="Blogs/blog.html">Blogs</a>
+        <a href="Blogs/blog.html">Blogs</a> <a href="Essays/essay.html">Essays</a>
         
         <h1>Week 1 Blog Post</h1>
         <h3> Setting up GitHub and publishing Pages.</h3>
