Moved text to blog week 1
Added an essays page link and text

--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essays</title>
+    <title>Designs</title>
 </head>
     <body>
-            <a href="../index.html">Back to Homepage</a>
-            <p>No essays yet. Stay tuned!</p>
+        <a href="../index.html">Back to Home Page</a>
+        <p>Follow along for my Design Journal and planning for this portfolio</p>
     </body>
 </html>
