--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -5,8 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Week 1</title>
 </head>
-<body>
-    <a href="../Blogs/blog.html"> All Blogs</a>
-    <a href="../index.html">Back to Home</a>
-</body>
+    <body>
+        <a href="../Blogs/blog.html"> All Blogs</a>
+        <a href="../index.html">Back to Home</a>
+
+        <h1>Week 1 Blog Post</h1>
+        <h3> Setting up GitHub and publishing Pages.</h3>
+            <p>The process was relatively smooth, save for some hiccups. <br>
+            The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
+            Was I confused? Absolutely. <br>
+            However, a retry never hurt anyone. 
+            Of course, with the help of a tutor, we retried the mission, and I noticed where I may have gone wrong. <br>
+            When I created the file "index.html," I spelled it with a capital "I" ("Index.html"). <br>
+            I believe this may fall under file naming case sensitivity when deploying to a server. <br>
+            Safe to say, there were hiccups, but it was manageable. Daunting? Yes, but not too shabby for a first.</p>
+            <div></div>
+
+        <h3>Reflection on the readings selected - relating it to your experience with the internet today</h3>
+            <p>
+                In "<b>As We May Think"</b>,  Vannevar Bush mentions several ways of technology that have become common to the modern-day man. 
+                He mentions how there is vast information in the world, 
+                yet technology may be able to compress that information into the size of a quarter of a table. 
+                We see this instance on computers storing information, hard drives that hold an entire library on it. 
+                This can be perceived in other forms of modern-day technology, such as the cards; he mentions, "The cards may be in miniature, so that they occupy little space" (Bush, 1945, p. 41).
+            </p>
+            <div></div>
+            <p>
+                An interesting electromechanical device that Bush hypothesized about is "memex" (Bush, 1945, p. 42). 
+                This would store and automatically cross-reference all the user's books, records, and other information. 
+                This can be seen in that a person can cross-reference almost about anything with information on the internet. 
+                This device would come to mirror how we think. I found Bush's reading quite interesting because the internet 
+                has become such a ubiquitous tool to us that such intricacies are more often than not overlooked.
+            </p>
+
+        <h3>Interesting things you have found about the history of the web:</h3>
+            <p>
+                <b>Flash</b>: was a software platform used to create interactive content on the web, ranging from graphics effects to streaming video. 
+                However, one has to download an emulator in order to view content created by the flash. Web browsers, of course, no longer support
+                it since standards such as HTML5, CSS3, and JavaScript. Something to note is that flash content didn't necessarily make content easy 
+                to find since the content was locked to search engines, making SEO useless (Jay, 2017). 
+                This is interesting because we now have AI assist tools on the internet to optimize our searches.
+            </p>
+            <div></div>
+
+            <p>
+                <b>Web 2.0</b>: The shift from passive content to user-generated content is so important, 
+                and it's interesting to think about how Bush’s concept of editable networks is now embedded 
+                in our everyday digital lives. Social media platforms wouldn't function at all without users actively creating
+                 content. 
+            </p>
+            <div></div>
+
+        <h3>Goals for this course.</h3>
+            <p>
+                Develop skills to build a web-portfolio, and just be able to build an eye-catching portfolio with the 
+                added bonus of learning the ins and outs of the internet and web. Learning UI/UX interfaces would be 
+                something to look forward to, not to mention cleaner coding practices!
+
+            </p>
+            <div></div>
+
+        <h3>References</h3>
+            <p>
+                Bush, V. (1945) ‘As We May Think’, The Atlantic, 1 July. Available at: <a> https://www.theatlantic.com/magazine/archive/1945/07/as-we-may-think/303881/Links to an external site. (Accessed: 7 February 2024)</a>.<br>
+                Jay (2017). Flash And Its History On The Web - The History of the Web. [online] The History of the Web. Available at: https://thehistoryoftheweb.com/the-story-of-flash/Links to an external site. [Accessed 16 Feb. 2025]. <br>
+                Web 2.0. Available at: https://en.wikipedia.org/wiki/Web_2.0<br>
+            </p>
+
+    </body>
 </html>
