--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -8,5 +8,78 @@
     <body>
         <a href="blog.html">All Blogs</a>
         <a href="../index.html">Back to Homepage</a>
-    </body>
+
+        <h1>Blog Post Week 2</h1>
+            <h3>Reflecting "You Say You Want a Revolution? Hypertext and the Laws of Media" (2003) by Moulthrop and how it speak to the internet today </h3>
+                <p> 
+                    "You Say You Want a Revolution? Hypertext and the Laws of Media" was an essay by Stuart Moulthrop originally published in 1991
+                     and then later included in the new Media Reader in 2003. Moulthrop's essay explores the concept of hypertext and it's potential
+                      to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. Moulthrop explores this concept through
+                       the lens of Theodor Holm Nelson's vision of a universal hypertext system called Xanadu. 
+                       However, I'd like to talk about the concept of "Hyperreality" that Moulthrop touches on.  
+                </p>
+
+                <p> 
+                    Moulthrop discusses how hypertext challenges traditional notions of reality by creating a space where the distinction between 
+                    the real and the imaginary blurs. This aligns with the Internet's ability to blend reality and virtual experiences through various digital platforms, 
+                    such as social media (but honestly, is anything even real at this point?). Social media platforms create a hyperreal environment where users/content creators/
+                    any IG users present a handpicked and curated version of themselves, where viewers may not be able to distinguish reality, the idea if that's even you, you know 
+                    what I mean? This builds off on Moulthrop's idea that "referential or “grounded” utterance becomes indistinguishable from the self-referential" (Moulthrop, 1991, p. 694). 
+                    These curated online identities become indistinguishable from their real ones; can you tell if your favourite YouTuber is actually that funny in real life or are they 
+                    just reading a script?
+                </p>
+
+                <p>
+                    Now this is particularly interesting because you can connect this concept of how users curate this online version of 
+                    themselves to Jean Baudrillard's concept of simulacra, where simulation replaces genuine experiences (Vieira, 2023). 
+                    This can be seen in social media, where external validation overshadows genuine connections.
+                </p>
+
+                <p>
+                    Additionally, this can be taken another step further since AI-generated content can be seen on social media, 
+                    and the lines between truth and falsehood are blurred (Vieira, 2023). This then challenges views of social media 
+                    content to differentiate genuine experiences and AI-generated content.
+                </p>
+
+                <p>
+                    However, in Moulthrop's conclusion, he remains somewhat skeptical: 
+                    " <i>Well, you know . . . We all want to change your head. </i>
+                    The question remains: <b>which heads do the changing, and which get the change?</b>"
+                </p>
+
+            <h2>Additional Stuff:</h2>
+                <h3>Discussing my folder structure and URL scheme, and outlining my decision-making.</h3>
+                <p>
+                    Below is an image demonstrating my folder structure. The reason for this is to organize where content goes and 
+                    to make it more readable on the URL. I used simple descriptive words and did not use any ASCII characters so that it would be easier 
+                    to navigate through. <br>
+                    Img here
+                </p>
+
+                <h3>Wireframe Ideas</h3>
+                <p>
+                    I am thinking of having a Homepage/ Landing page (my index.html) really short and simple, then having pages for my designs showcasing my 
+                    wireframe. A page for my essay, and all my essays present but if clicked on, will lead you to a page that contains the whole essay and well 
+                    presented. A page to hold all my blogs, and a page leading to each blog to showcase the blog posts in their entirety.
+                </p>
+
+                <h3>References to inspiration websites</h3>
+                <p>
+                    https://www.weareink.co.uk/Links to an external site. <br>
+
+                    https://doubble.group/sg/Links to an external site.<br>
+
+                    https://lfe.org/Links to an external site.<br>
+
+                    https://www.gubrica.com/Links to an external site.<br>
+
+                    https://pinkmoon.co/Links to an external site.<br>
+                </p>
+                
+                <h3>References</h3>
+                <p>
+                    Moulthrop, S. (1991). You Say You Want a Revolution? Hypertext and the Laws of Media. Postmodern Culture, 1(3). Available at: https://doi.org/10.1353/pmc.1991.0019Links to an external site. [Accessed 24 Feb. 2025]. <br>
+
+                    Vieira, A. (2023). Baudrillard’s Theory and the Hyperreal World of Social Media - Armando Vieira. [online] Armando Vieira. Available at: https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media/Links to an external site. [Accessed 24 Feb. 2025].<br>
+                </p>
 </html>
