Added text onto HomePage
Added text to check out the blogs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <a href="Blogs/blog.html">Blogs</a> <a href="Essays/essay.html">Essays</a> <a href="Designs/designs.html">Designs</a>
         
         <h1>Stay tuned for more!</h1> 
+        <h3>Check out the blogs while you're here</h3>
 
 
     </body>
