--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
     <body>
 
-        <a href="Blogs/blog.html">Blogs</a> <a href="Essays/essay.html">Essays</a> <a href="Designs/designs.html">Designs</a>
+        <a href="Blogs/blog.html">Blogs</a> 
+        <a href="Essays/essay.html">Essays</a> 
+        <a href="Designs/designs.html">Designs</a>
+        <a href="Profile/profile.html">Profile</a>
+        <a href="Portfolio/portfoli.html">Portfolio</a>
         
         <h1>Stay tuned for more!</h1> 
         <h3>Check out the blogs while you're here</h3>
