--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -6,7 +6,12 @@
     <title>Blog Week 2</title>
 </head>
     <body>
-        <a href="blog.html">All Blogs</a>
+        <a href="../index.html">Back to Home Page</a>
+        <a href="blog.html">All Blogs</a> 
+        <a href="Essays/essay.html">Essays</a> 
+        <a href="Designs/designs.html">Designs</a>
+        <a href="Profile/profile.html">Profile</a>
+        <a href="Portfolio/portfoli.html">Portfolio</a>
         <a href="../index.html">Back to Homepage</a>
 
         <h1>Blog Post Week 2</h1>
