--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -6,6 +6,14 @@
     <title>Profile</title>
 </head>
     <body>
+        <a href="../index.html">Back to HomePage</a>
+        <a href="Blogs/blog.html">Blogs</a> 
+        <a href="Essays/essay.html">Essays</a> 
+        <a href="Designs/designs.html">Designs</a>
+        <a href="Profile/profile.html">Profile</a>
+        <a href="Portfolio/portfoli.html">Portfolio</a>
+        
         <h1>About me</h1>
+
     </body>
 </html>
