--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -7,11 +7,11 @@
 </head>
     <body>
         <a href="../index.html">Back to Home Page</a>
-        <a href="Blogs/blog.html">Blogs</a> 
-        <a href="Essays/essay.html">Essays</a> 
-        <a href="Designs/designs.html">Designs</a>
-        <a href="Profile/profile.html">Profile</a>
-        <a href="Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Blogs/blog.html">Blogs</a> 
+        <a href="../Essays/essay.html">Essays</a> 
+        <a href="designs.html">Designs</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <a href="../Portfolio/portfoli.html">Portfolio</a>
         <p>Follow along for my Design Journal and planning for this portfolio</p>
     </body>
 </html>
