--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -7,12 +7,12 @@
 </head>
     <body>
         <a href="../index.html">Back to Homepage</a>
-        <a href="Blogs/blog.html">Blogs</a> 
-        <a href="Essays/essay.html">Essays</a> 
-        <a href="Designs/designs.html">Designs</a>
-        <a href="Profile/profile.html">Profile</a>
-        <a href="Portfolio/portfoli.html">Portfolio</a>
-        
+        <a href="../Blogs/blog.html">Blogs</a> 
+        <a href="essay.html">Essays</a> 
+        <a href="../Designs/designs.html">Designs</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <a href="../Portfolio/portfoli.html">Portfolio</a>
+
             <p>No essays yet. Stay tuned!</p>
     </body>
 </html>
