--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -7,11 +7,11 @@
 </head>
     <body>
         <a href="../index.html">Back to HomePage</a>
-        <a href="Blogs/blog.html">Blogs</a> 
-        <a href="Essays/essay.html">Essays</a> 
-        <a href="Designs/designs.html">Designs</a>
-        <a href="Profile/profile.html">Profile</a>
-        <a href="Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Blogs/blog.html">Blogs</a> 
+        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../Designs/designs.html">Designs</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <a href="portfoli.html">Portfolio</a>
         <h1> My portfolio of thingsss</h1>
     </body>
 </html>
