--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -18,7 +18,7 @@
         <h3> Setting up GitHub and publishing Pages.</h3>
             <p>The process was relatively smooth, save for some hiccups. 
             The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
-            Was I confused? Absolutely. 
+            Was I confused? Absolutely. <br>
             However, a retry never hurt anyone. 
             Of course, with the help of a tutor, we retried the mission, and I noticed where I may have gone wrong. 
             When I created the file "index.html," I spelled it with a capital "I" ("Index.html"). 
