--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -58,7 +58,7 @@
                     Below is an image demonstrating my folder structure. The reason for this is to organize where content goes and 
                     to make it more readable on the URL. I used simple descriptive words and did not use any ASCII characters so that it would be easier 
                     to navigate through. <br>
-                    Img here
+                    <img class="Folder" src="../Images/FolderStructure001.png" alt="Folder structure">
                 </p>
 
                 <h3>Wireframe Ideas</h3>
@@ -66,6 +66,7 @@
                     I am thinking of having a Homepage/ Landing page (my index.html) really short and simple, then having pages for my designs showcasing my 
                     wireframe. A page for my essay, and all my essays present but if clicked on, will lead you to a page that contains the whole essay and well 
                     presented. A page to hold all my blogs, and a page leading to each blog to showcase the blog posts in their entirety.
+                    <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Low fedility Wireframe">
                 </p>
 
                 <h3>References to inspiration websites</h3>
