--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -13,5 +13,10 @@
         <a href="../Profile/profile.html">Profile</a>
         <a href="../Portfolio/portfoli.html">Portfolio</a>
         <p>Follow along for my Design Journal and planning for this portfolio</p>
+
+        <p>
+            Current wireframe
+            <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Wireframe">
+        </p>
     </body>
 </html>
