--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Week 1</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Blog week 1 about Setting GitHub and the reading As We May Think">
 </head>
     <body>
         <a href="../index.html">Back to Home Page</a>
