--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Week 2</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Blog week 2 about the text by Moulthrop">
 </head>
     <body>
         <a href="../index.html">Back to Home Page</a>
