--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Week 3</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Blog week 3 about Interaction Design and a web-style guide">
 </head>
     <body>
         <h3>Week 3 Blog</h3>
