--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="The blog page that contains the links to all the blogs">
 </head>
     <body>
         <a href="../index.html">Homepage</a>
