--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designs</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Design document process displayed here">
 </head>
     <body>
         <a href="../index.html">Back to Home Page</a>
