--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essays</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Essays for the module">
 </head>
     <body>
         <a href="../index.html">Back to Homepage</a>
