--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Portfolio projects here">
 </head>
     <body>
         <a href="../index.html">Back to HomePage</a>
