--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Profile containing information about me and contact information">
 </head>
     <body>
         <a href="../index.html">Back to HomePage</a>
