Images Week 3 Blog
Added images into the week 3 Blog

--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -39,7 +39,7 @@
             </p>
             <p>
                 Brainstorming this initial version will probably end up looking like a mesh of strings:
-                <img alt="Mind map of the content" > 
+                <img src="../Images/Content.png" alt="Mind map of the content" > 
             </p>
             
 
@@ -70,7 +70,7 @@
                 They learn more about me in the "About Me" section for personal context, 
                 and have the contact section to reach out if they’re interested in collaboration or hiring.   
             </p>
-            <img alt="User Experience Flow" > 
+            <img src="../Images/User Experience Flow.png" alt="User Experience Flow" > 
             
         <h4>USER INTERFACE ELEMENTS</h4>
             <p>
