--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -34,6 +34,8 @@
 
             </p>
         
-        
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
