--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -79,5 +79,8 @@
                 Web 2.0. Available at: https://en.wikipedia.org/wiki/Web_2.0<br>
             </p>
 
+            <footer>
+                <p>Brought to you by Amina Moosa</p>
+            </footer>
     </body>
 </html>
