--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -117,5 +117,8 @@
                 Team, T.U. (2024). Brand Style Guides: What They Are, With Top Brand Examples. [online] Upwork.com. Available at:  https://www.upwork.com/resources/brand-style-guides#brand-style-guideLinks to an external site. [Accessed 3 Mar. 2025]. <br>
             </p>
 
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
