--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -20,5 +20,8 @@
             Current wireframe
             <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Wireframe">
         </p>
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
