--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -16,5 +16,9 @@
         <a href="../Portfolio/portfoli.html">Portfolio</a>
 
             <p>No essays yet. Stay tuned!</p>
+            
+            <footer>
+                <p>Brought to you by Amina Moosa</p>
+            </footer>
     </body>
 </html>
