--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -15,5 +15,9 @@
         <a href="../Profile/profile.html">Profile</a>
         <a href="portfoli.html">Portfolio</a>
         <h1> My portfolio of thingsss</h1>
+
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
