--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -17,5 +17,8 @@
 
         <h1>About me</h1>
 
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
