--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             <h3>Check out the blogs while you're here</h3>
 
 
+        <footer>
+            <p>Brought to you by Amina Moosa</p>
+        </footer>
     </body>
 </html>
