--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amina Moosa</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Home page for the website">
 </head>
     <body>
-
+        <a href="Home">Home</a>
         <a href="Blogs/blog.html">Blogs</a> 
         <a href="Essays/essay.html">Essays</a> 
         <a href="Designs/designs.html">Designs</a>
