Fixed Links and Added img
Fixed the links on the blogs page and all the other pages, and added images for week 4 blog post

--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Essays for the module">
 </head>
     <body>
-        <a href="../index.html">Back to Homepage</a>
+        <a href="../index.html">Home</a>
         <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="essay.html">Essays</a> 
         <a href="../Designs/designs.html">Designs</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <a>Essays</a> 
         <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
 
             <p>No essays yet. Stay tuned!</p>
             
