--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -8,13 +8,15 @@
     <meta name="description" content="Portfolio projects here">
 </head>
     <body>
-        <a href="../index.html">Back to HomePage</a>
+        <a href="../index.html">Home</a>
         <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="../Essays/essay.html">Essays</a> 
         <a href="../Designs/designs.html">Designs</a>
+        <a href="../Essays/essay.html">Essays</a> 
+        <a>Portfolio</a>
         <a href="../Profile/profile.html">Profile</a>
-        <a href="portfoli.html">Portfolio</a>
+
         <h1> My portfolio of thingsss</h1>
+        <h3>Stick around and you may find them here!</h3>
 
         <footer>
             <p>Brought to you by Amina Moosa</p>
