--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="description" content="Home page for the website">
 </head>
     <body>
-        <a href="Home">Home</a>
+        <a>Home</a>
         <a href="Blogs/blog.html">Blogs</a> 
-        <a href="Essays/essay.html">Essays</a> 
         <a href="Designs/designs.html">Designs</a>
-        <a href="Profile/profile.html">Profile</a>
+        <a href="Essays/essay.html">Essays</a> 
         <a href="Portfolio/portfoli.html">Portfolio</a>
+        <a href="Profile/profile.html">Profile</a>
+
         
         <h1>Stay tuned for more!</h1> 
             <h3>Check out the blogs while you're here</h3>
