--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -8,7 +8,19 @@
     <meta name="description" content="The blog page that contains the links to all the blogs">
 </head>
     <body>
-        <a href="../index.html">Homepage</a>
+        <a href="../index.html">Home</a>
+        <a>Blogs</a> 
+        <a href="../Designs/designs.html">Designs</a>
+        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <br>
+        <br>
+        <a href="blog_week_1.html">Week 1</a>
+        <a href="blog_week_2.html">Week 2</a>
+        <a href="blog_week_3.html">Week 3</a>
+        <a href="blog_week_4.html">Week 4</a>
+
 
         <h2>Week 1 Blog Post</h2>
             <h3> Setting up GitHub and publishing Pages.</h3>
@@ -30,8 +42,18 @@
             <p>
                 Working through the slides for Interaction Design (Geyser, 2023) for the web, define and discuss 
                 your user alignment, and map out your site's content, experience, and interface elements.<br>
-                Read more <a href="blog_week_3.html">Blog week 3</a>
+                Read more <a href="blog_week_3.html">Blog Week 3</a>
 
+            </p>
+
+        <h2>Week 4 Blog Post</h2>
+            <h3>Design Section Mapping</h3>
+            <p>
+                Design Process: The first iteration of my web-style guide is as follows:
+                The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
+                This is translated through the main colour palette and the fonts (Elementor, 2020). 
+                There are ideas and variations for some aspects in the style-guide...
+                Read more <a href="blog_week_4.html">Blog Week 4</a>
             </p>
         
         <footer>
