--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -8,12 +8,18 @@
     <meta name="description" content="Blog week 1 about Setting GitHub and the reading As We May Think">
 </head>
     <body>
-        <a href="../index.html">Back to Home Page</a>
-        <a href="blog.html">All Blogs</a> 
-        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../index.html">Home</a>
+        <a href="blog.html">Blogs</a> 
         <a href="../Designs/designs.html">Designs</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <a href="../Essays/essay.html">Essays</a> 
         <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <br>
+        <br>
+        <a>Week 1</a>
+        <a href="blog_week_2.html">Week 2</a>
+        <a href="blog_week_3.html">Week 3</a>
+        <a href="blog_week_4.html">Week 4</a>
         
 
         <h1>Week 1 Blog Post</h1>
