--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -8,13 +8,18 @@
     <meta name="description" content="Blog week 2 about the text by Moulthrop">
 </head>
     <body>
-        <a href="../index.html">Back to Home Page</a>
-        <a href="blog.html">All Blogs</a> 
-        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../index.html">Home</a>
+        <a href="blog.html">Blogs</a> 
         <a href="../Designs/designs.html">Designs</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <a href="../Essays/essay.html">Essays</a> 
         <a href="../Portfolio/portfoli.html">Portfolio</a>
-        <a href="../index.html">Back to Homepage</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <br>
+        <br>
+        <a href="blog_week_1.html">Week 1</a>
+        <a>Week 2</a>
+        <a href="blog_week_3.html">Week 3</a>
+        <a href="blog_week_4.html">Week 4</a>
 
         <h1>Blog Post Week 2</h1>
             <h3>Reflecting "You Say You Want a Revolution? Hypertext and the Laws of Media" (2003) by Moulthrop and how it speak to the internet today </h3>
