--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -8,6 +8,19 @@
     <meta name="description" content="Blog week 3 about Interaction Design and a web-style guide">
 </head>
     <body>
+        <a href="../index.html">Home</a>
+        <a href="blog.html">Blogs</a> 
+        <a href="../Designs/designs.html">Designs</a>
+        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <br>
+        <br>
+        <a href="blog_week_1.html">Week 1</a>
+        <a href="blog_week_2.html">Week 2</a>
+        <a>Week 3</a>
+        <a href="blog_week_4.html">Week 4</a>
+
         <h3>Week 3 Blog</h3>
             <p>Working through the slides for Interaction Design (Geyser, 2023) for the web, define and discuss 
                 your user alignment, and map out your site's content, experience, and interface elements.</p>
