--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -8,6 +8,20 @@
     <meta name="description" content="Blog week 4 about beginning the design section and reflection so far">
 </head>
 <body>
+        <a href="../index.html">Home</a>
+        <a href="blog.html">Blogs</a> 
+        <a href="../Designs/designs.html">Designs</a>
+        <a href="../Essays/essay.html">Essays</a> 
+        <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
+        <br>
+        <br>
+        <a href="blog_week_1.html">Week 1</a>
+        <a href="blog_week_2.html">Week 2</a>
+        <a href="blog_week_3.html">Week 3</a>
+        <a>Week 4</a>
+
+
     <h1>Blog Post Week 4</h1>
 
         <h3>Design Process</h3>
@@ -16,6 +30,8 @@
                 The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
                 This is translated through the main colour palette and the fonts (Elementor, 2020). 
                 There are ideas and variations for some aspects in the style-guide:
+                <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
+                <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
             </p>
 
         <h3>Defining my visual aesthetic:</h3>
