--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -8,12 +8,13 @@
     <meta name="description" content="Design document process displayed here">
 </head>
     <body>
-        <a href="../index.html">Back to Home Page</a>
+        <a href="../index.html">Home</a>
         <a href="../Blogs/blog.html">Blogs</a> 
+        <a>Designs</a>
         <a href="../Essays/essay.html">Essays</a> 
-        <a href="designs.html">Designs</a>
-        <a href="../Profile/profile.html">Profile</a>
         <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Profile/profile.html">Profile</a>
+
         <p>Follow along for my Design Journal and planning for this portfolio</p>
 
         <p>
