--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Profile containing information about me and contact information">
 </head>
     <body>
-        <a href="../index.html">Back to HomePage</a>
+        <a href="../index.html">Home</a>
         <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="../Essays/essay.html">Essays</a> 
         <a href="../Designs/designs.html">Designs</a>
-        <a href="profile.html">Profile</a>
+        <a href="../Essays/essay.html">Essays</a> 
         <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a>Profile</a>
 
         <h1>About me</h1>
 
