Avatar img added

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -16,6 +16,11 @@
         <a>Profile</a>
 
         <h1>About me</h1>
+            <p>
+                <img src="../Images/Avatar.jpg" alt="A avatar of me">
+                
+            </p>
+
 
         <footer>
             <p>Brought to you by Amina Moosa</p>
