--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Blog week 4 about beginning the design section and reflection so far">
 </head>
-<body>
+    <body>
         <a href="../index.html">Home</a>
         <a href="blog.html">Blogs</a> 
         <a href="../Designs/designs.html">Designs</a>
@@ -78,8 +78,13 @@
 
         <h3>References:</h3>
             <p>
-                Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] Available at: https://elementor.com/blog/web-design-style-guide/Links to an external site. [Accessed 10 Mar. 2025]. <br>
+                Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] 
+                Available at: <a href=" https://elementor.com/blog/web-design-style-guide"> https://elementor.com/blog/web-design-style-guide </a> Links to an external site. [Accessed 10 Mar. 2025]. <br>
             </p>
-    
-</body>
+
+            <a href="#">^</a>
+        <footer>
+                <p>Brought to you by Amina Moosa</p>
+        </footer>
+    </body>
 </html>
