--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -65,7 +65,7 @@
                     Below is an image demonstrating my folder structure. The reason for this is to organize where content goes and 
                     to make it more readable on the URL. I used simple descriptive words and did not use any ASCII characters so that it would be easier 
                     to navigate through. <br>
-                    <img class="Folder" src="../Images/FolderStructure001.png" alt="Folder structure">
+                    <img class="Folder" src="../Images/blog_week_2_FolderStructure001.png" alt="Folder structure">
                 </p>
 
                 <h3>Wireframe Ideas</h3>
@@ -73,28 +73,31 @@
                     I am thinking of having a Homepage/ Landing page (my index.html) really short and simple, then having pages for my designs showcasing my 
                     wireframe. A page for my essay, and all my essays present but if clicked on, will lead you to a page that contains the whole essay and well 
                     presented. A page to hold all my blogs, and a page leading to each blog to showcase the blog posts in their entirety.
-                    <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Low fedility Wireframe">
+                    <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe">
                 </p>
 
                 <h3>References to inspiration websites</h3>
                 <p>
-                    https://www.weareink.co.uk/Links to an external site. <br>
+                    <a href="https://www.weareink.co.uk">https://www.weareink.co.uk</a>Links to an external site. <br>
 
-                    https://doubble.group/sg/Links to an external site.<br>
+                    <a href="https://doubble.group/sg">https://doubble.group/sg </a>Links to an external site.<br>
 
-                    https://lfe.org/Links to an external site.<br>
+                    <a href="https://lfe.org">https://lfe.org </a>Links to an external site.<br>
 
-                    https://www.gubrica.com/Links to an external site.<br>
+                    <a href="https://www.gubrica.com">https://www.gubrica.com </a>Links to an external site.<br>
 
-                    https://pinkmoon.co/Links to an external site.<br>
+                    <a href="https://pinkmoon.co">https://pinkmoon.co</a> Links to an external site.<br>
                 </p>
                 
                 <h3>References</h3>
                 <p>
-                    Moulthrop, S. (1991). You Say You Want a Revolution? Hypertext and the Laws of Media. Postmodern Culture, 1(3). Available at: https://doi.org/10.1353/pmc.1991.0019Links to an external site. [Accessed 24 Feb. 2025]. <br>
-                    Vieira, A. (2023). Baudrillard’s Theory and the Hyperreal World of Social Media - Armando Vieira. [online] Armando Vieira. Available at: https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media/Links to an external site. [Accessed 24 Feb. 2025].<br>
+                    Moulthrop, S. (1991). You Say You Want a Revolution? Hypertext and the Laws of Media. Postmodern Culture, 1(3). 
+                    Available at: <a href="https://doi.org/10.1353/pmc.1991.0019"> https://doi.org/10.1353/pmc.1991.0019 </a> Links to an external site. [Accessed 24 Feb. 2025]. <br>
+                    Vieira, A. (2023). Baudrillard’s Theory and the Hyperreal World of Social Media - Armando Vieira. [online] Armando Vieira. 
+                    Available at: <a href="https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media"> https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media </a> Links to an external site. [Accessed 24 Feb. 2025].<br>
                 </p>
 
+                <a href="#">^</a>
                 <footer>
                     <p>Brought to you by Amina Moosa</p>
                 </footer>
