--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -8,80 +8,85 @@
     <meta name="description" content="Blog week 4 about beginning the design section and reflection so far">
 </head>
     <body>
-        <a href="../index.html">Home</a>
-        <a href="blog.html">Blogs</a> 
-        <a href="../Designs/designs.html">Designs</a>
-        <a href="../Essays/essay.html">Essays</a> 
-        <a href="../Portfolio/portfoli.html">Portfolio</a>
-        <a href="../Profile/profile.html">Profile</a>
-        <br>
-        <br>
-        <a href="blog_week_1.html">Week 1</a>
-        <a href="blog_week_2.html">Week 2</a>
-        <a href="blog_week_3.html">Week 3</a>
-        <a>Week 4</a>
+        <header>
+            <a href="../index.html">Home</a>
+            <a href="blog.html">Blogs</a> 
+            <a href="../Designs/designs.html">Designs</a>
+            <a href="../Essays/essay.html">Essays</a> 
+            <a href="../Portfolio/portfoli.html">Portfolio</a>
+            <a href="../Profile/profile.html">Profile</a>
+        </header>
+            <nav>
+                <a href="blog_week_1.html">Week 1</a>
+                <a href="blog_week_2.html">Week 2</a>
+                <a href="blog_week_3.html">Week 3</a>
+                <a>Week 4</a>
+            </nav>
 
+        <main>
+            <article>
+                <h1>Blog Post Week 4</h1>
 
-    <h1>Blog Post Week 4</h1>
+                    <h3>Design Process</h3>
+                        <p>
+                            The first iteration of my web-style guide is as follows:
+                            The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
+                            This is translated through the main colour palette and the fonts (Elementor, 2020). 
+                            There are ideas and variations for some aspects in the style-guide:
+                            <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
+                            <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
+                        </p>
 
-        <h3>Design Process</h3>
-            <p>
-                The first iteration of my web-style guide is as follows:
-                The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
-                This is translated through the main colour palette and the fonts (Elementor, 2020). 
-                There are ideas and variations for some aspects in the style-guide:
-                <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
-                <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
-            </p>
+                    <h3>Defining my visual aesthetic:</h3>
+                        <p>
+                            The initial iteration of the visual aesthetic is tech-futuristic, since the target audience are people in the tech field. 
+                            However, this is subject to change since one of the main goals for this website is readability.
+                        </p>
 
-        <h3>Defining my visual aesthetic:</h3>
-            <p>
-                The initial iteration of the visual aesthetic is tech-futuristic, since the target audience are people in the tech field. 
-                However, this is subject to change since one of the main goals for this website is readability.
-            </p>
+                    <h3>Reflection:</h3>
+                        <p>
+                            In the past week, I've started working on my web-style guide. 
+                            I've thought about things such as fonts, visual aesthetics, and colour palette.
+                            My current wireframes only hold a foundation for the website, and as we go on and learn about CSS and JavaScript, 
+                            things such as interactive elements and user experience will be iterated. 
+                            In addition, I began incorporating metadata into my HTML pages.
+                        </p>
 
-        <h3>Reflection:</h3>
-            <p>
-                In the past week, I've started working on my web-style guide. 
-                I've thought about things such as fonts, visual aesthetics, and colour palette.
-                My current wireframes only hold a foundation for the website, and as we go on and learn about CSS and JavaScript, 
-                things such as interactive elements and user experience will be iterated. 
-                In addition, I began incorporating metadata into my HTML pages.
-            </p>
+                    <h3>Struggles:</h3>
+                        <p>
+                            I struggle with mapping the layout and composition of my website. 
+                            My goal within the next coming weeks is to work on a good visual hierarchy of information; 
+                            this includes the use of white space. I struggle with prioritizing information based on what 
+                            is interesting and what is important for the user and me. Due to this, I have noticed that I 
+                            don't have a consistency, a familiarity pattern within my design structure.
+                        </p>
 
-        <h3>Struggles:</h3>
-            <p>
-                I struggle with mapping the layout and composition of my website. 
-                My goal within the next coming weeks is to work on a good visual hierarchy of information; 
-                this includes the use of white space. I struggle with prioritizing information based on what 
-                is interesting and what is important for the user and me. Due to this, I have noticed that I 
-                don't have a consistency, a familiarity pattern within my design structure.
-            </p>
+                    <h3>Proud of:</h3>
+                        <p>
+                            I am proud of the basic foundation that the website is built on. 
+                            All the information in my folder structures is sorted in an easy-to-navigate manner. 
+                            In addition, I have been trying to keep updating my blogs as the weeks go on, which I am proud of 
+                            since I do happen to have a procrastination problem.
+                        </p>
 
-        <h3>Proud of:</h3>
-            <p>
-                I am proud of the basic foundation that the website is built on. 
-                All the information in my folder structures is sorted in an easy-to-navigate manner. 
-                In addition, I have been trying to keep updating my blogs as the weeks go on, which I am proud of 
-                since I do happen to have a procrastination problem.
-            </p>
+                    <h3>Going Forward:</h3>
+                        <p>
+                            Going forward, I'd like to work on my visual hierarchy of information presented on the 
+                            website and incorporate UX Core Principles into the website. I'd also like to work on the 
+                            white space in my design; this would mean that I iterate my wireframe designs. I'd also like 
+                            to do more research on metadata and incorporate that into my pages. This ties into the consistency 
+                            of the design structures that I would like to incorporate. This would include design legibility, 
+                            since I usually weigh pretty fonts over legible fonts.
+                        </p>
 
-        <h3>Going Forward:</h3>
-            <p>
-                Going forward, I'd like to work on my visual hierarchy of information presented on the 
-                website and incorporate UX Core Principles into the website. I'd also like to work on the 
-                white space in my design; this would mean that I iterate my wireframe designs. I'd also like 
-                to do more research on metadata and incorporate that into my pages. This ties into the consistency 
-                of the design structures that I would like to incorporate. This would include design legibility, 
-                since I usually weigh pretty fonts over legible fonts.
-            </p>
-
-        <h3>References:</h3>
-            <p>
-                Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] 
-                Available at: <a href=" https://elementor.com/blog/web-design-style-guide"> https://elementor.com/blog/web-design-style-guide </a> Links to an external site. [Accessed 10 Mar. 2025]. <br>
-            </p>
-
+                    <h3>References:</h3>
+                        <p>
+                            Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] 
+                            Available at: <a href=" https://elementor.com/blog/web-design-style-guide"> https://elementor.com/blog/web-design-style-guide </a> Links to an external site. [Accessed 10 Mar. 2025]. <br>
+                        </p>
+                </article>
+            </main>
+            
             <a href="#">^</a>
         <footer>
                 <p>Brought to you by Amina Moosa</p>
