--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -8,19 +8,26 @@
     <meta name="description" content="Design document process displayed here">
 </head>
     <body>
-        <a href="../index.html">Home</a>
-        <a href="../Blogs/blog.html">Blogs</a> 
-        <a>Designs</a>
-        <a href="../Essays/essay.html">Essays</a> 
-        <a href="../Portfolio/portfoli.html">Portfolio</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <header>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a>Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfoli.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
+        </header>
 
-        <p>Follow along for my Design Journal and planning for this portfolio</p>
+        <main>
+            <p>Follow along for my Design Journal and planning for this portfolio</p>
 
-        <p>
-            Current wireframe
-            <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Wireframe">
-        </p>
+            <p>
+                Current wireframe
+                <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Wireframe">
+            </p>
+        </main>
+
         <footer>
             <p>Brought to you by Amina Moosa</p>
         </footer>
