--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -8,15 +8,21 @@
     <meta name="description" content="Essays for the module">
 </head>
     <body>
-        <a href="../index.html">Home</a>
-        <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="../Designs/designs.html">Designs</a>
-        <a>Essays</a> 
-        <a href="../Portfolio/portfoli.html">Portfolio</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <header>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a>Essays</a> 
+                <a href="../Portfolio/portfoli.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
+        </header>
 
+        <main>
             <p>No essays yet. Stay tuned!</p>
-            
+        </main>
+        
             <footer>
                 <p>Brought to you by Amina Moosa</p>
             </footer>
