--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -8,16 +8,22 @@
     <meta name="description" content="Portfolio projects here">
 </head>
     <body>
-        <a href="../index.html">Home</a>
-        <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="../Designs/designs.html">Designs</a>
-        <a href="../Essays/essay.html">Essays</a> 
-        <a>Portfolio</a>
-        <a href="../Profile/profile.html">Profile</a>
+        <header>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a>Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
+        </header>
 
-        <h1> My portfolio of thingsss</h1>
-        <h3>Stick around and you may find them here!</h3>
-
+        <main>
+            <h1> My portfolio of thingsss</h1>
+            <h3>Stick around and you may find them here!</h3>
+        </main>
+        
         <footer>
             <p>Brought to you by Amina Moosa</p>
         </footer>
