--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -8,19 +8,24 @@
     <meta name="description" content="Profile containing information about me and contact information">
 </head>
     <body>
-        <a href="../index.html">Home</a>
-        <a href="../Blogs/blog.html">Blogs</a> 
-        <a href="../Designs/designs.html">Designs</a>
-        <a href="../Essays/essay.html">Essays</a> 
-        <a href="../Portfolio/portfoli.html">Portfolio</a>
-        <a>Profile</a>
+        <header>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfoli.html">Portfolio</a>
+                <a>Profile</a>
+            </nav>
+        </header>
 
-        <h1>About me</h1>
-            <p>
-                <img src="../Images/Avatar.jpg" alt="A avatar of me">
-                
-            </p>
-
+        <main>
+            <h1>About me</h1>
+                <p>
+                    <img src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
+                    
+                </p>
+        </main>
 
         <footer>
             <p>Brought to you by Amina Moosa</p>
