--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <meta name="description" content="Home page for the website">
 </head>
     <body>
-        <a>Home</a>
-        <a href="Blogs/blog.html">Blogs</a> 
-        <a href="Designs/designs.html">Designs</a>
-        <a href="Essays/essay.html">Essays</a> 
-        <a href="Portfolio/portfoli.html">Portfolio</a>
-        <a href="Profile/profile.html">Profile</a>
-
+        <header>
+            <nav>
+                <a>Home</a>
+                <a href="Blogs/blog.html">Blogs</a> 
+                <a href="Designs/designs.html">Designs</a>
+                <a href="Essays/essay.html">Essays</a> 
+                <a href="Portfolio/portfoli.html">Portfolio</a>
+                <a href="Profile/profile.html">Profile</a>
+            </nav>
+        </header>
         
-        <h1>Stay tuned for more!</h1> 
-            <h3>Check out the blogs while you're here</h3>
-
+        <main>
+            <h1>Stay tuned for more!</h1> 
+                <h3>Check out the blogs while you're here</h3>
+        </main>
 
         <footer>
             <p>Brought to you by Amina Moosa</p>
