--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -9,22 +9,29 @@
 </head>
     <body>
         <header>
-            <nav>
                 <a href="../index.html">Home</a>
                 <a href="../Blogs/blog.html">Blogs</a> 
                 <a>Designs</a>
                 <a href="../Essays/essay.html">Essays</a> 
                 <a href="../Portfolio/portfoli.html">Portfolio</a>
                 <a href="../Profile/profile.html">Profile</a>
-            </nav>
         </header>
+        <nav>
+            <a>Main Designs Page</a>
+            <a href="web_style_group_project.html">Group Project</a>
+        </nav>
 
         <main>
             <p>Follow along for my Design Journal and planning for this portfolio</p>
 
             <p>
                 Current wireframe
-                <img class="wireframe" src="../Images/WireframePrototype001.jpg" alt="Wireframe">
+                <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+            </p>
+
+            <p>
+                Web-Style Guide Group Project
+                View More...
             </p>
         </main>
 
