--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -25,6 +25,9 @@
                     <img src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
                     
                 </p>
+                <p>
+                    I'm Amina Moosa. A 3rd year Digital Arts student. Follow along for more updates on my web portfolio.
+                </p>
         </main>
 
         <footer>
