<To the top> Link
Added the link so that viewers can click on it to go the top

--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -95,7 +95,7 @@
             </main>
 
 
-                <a href="#">^</a>
+                <a href="#">To the top</a>
             <footer>
                 <p>Brought to you by Amina Moosa</p>
             </footer>
