--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -87,7 +87,7 @@
                 </article>
             </main>
             
-            <a href="#">^</a>
+            <a href="#">To the top</a>
         <footer>
                 <p>Brought to you by Amina Moosa</p>
         </footer>
