--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -31,7 +31,7 @@
 
             <p>
                 Web-Style Guide Group Project
-                View More...
+                <a href="web_style_group_project.html">View More...</a>
             </p>
         </main>
 
