--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -40,8 +40,20 @@
                 <img src="../Images/Designs/Web_Style_Guide_Group_Project/12.jpg" alt="Img 12 for Web Style Guide group project" height="600" width="1440">
                 <img src="../Images/Designs/Web_Style_Guide_Group_Project/13.jpg" alt="Img 13 for Web Style Guide group project" height="600" width="1440">
             </p>
+
+            <p>
+                Team:
+                <ul>
+                    <li>Jordyn Van Aswegen</li>
+                    <li>Elri Greyling</li>
+                    <li>Ali Raffee</li>
+                    <li>Lubabalo Dlwathi</li>
+                    <li>Amina Moosa</li>
+                </ul>
+            </p>
         </main>
 
+        <a href="#">To the top</a>
         <footer>
             Brought to you by Amina Moosa
         </footer>
