--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -102,7 +102,7 @@
                         </p>
             </article>
         </main>
-                <a href="#">^</a>
+                <a href="#">To the top</a>
                 <footer>
                     <p>Brought to you by Amina Moosa</p>
                 </footer>
